Fonts and minor changes

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -10,3 +10,7 @@
     font-family: Roboto-Bold;
     src: url(roboto/Roboto-Bold.ttf);
 }
+@font-face {
+    font-family: Roboto-Medium;
+    src: url(roboto/Roboto-Medium.ttf);
+}
