Light font added, index html changes to add logo for developed and for

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -14,3 +14,7 @@
     font-family: Roboto-Medium;
     src: url(roboto/Roboto-Medium.ttf);
 }
+@font-face {
+    font-family: Roboto-Light;
+    src: url(roboto/Roboto-Light.ttf);
+}
